Revert "fix: flow-relative overflow and resize"
This reverts commit 8f3eca494b49b475d8fde23aa3ac89f0d1c66709.

Currenly only available in firefox

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -18,7 +18,7 @@ p, address, blockquote, pre, table, dl, ul, ol, figure, fieldset {
 }
 
 html {
-    overflow-block: scroll;
+    overflow-y: scroll;
     background-color: $color-bg;
     color: $color-fg;
     font-size: $font-size-max;
@@ -102,7 +102,7 @@ td, th {
 
 textarea,
 select[multiple] {
-    resize: block;
+    resize: vertical;
 }
 
 // Prevent sub and sup affecting line-height.
